examples/syntax_errors/assignment_to_literal.py
a = 12
12 = a  # Error on this line: can't assign to literal
'hello' = a  # Error on this line: can't assign to literal
